small fixes to regression

--- a/Workshops/workshop_01/02_regression.ipynb
+++ b/Workshops/workshop_01/02_regression.ipynb
@@ -131,7 +131,7 @@
    "id": "09db8b63-e467-42ca-b769-8738177e98e6",
    "metadata": {},
    "source": [
-    "### 1.2. Splitting data into training, validation, and testing"
+    "### 1.2. Splitting data into training, testing, (and validation)"
    ]
   },
   {
@@ -189,15 +189,19 @@
     "2. A one-dimensional array with the outputs (y)\n",
     "The options parameter indicates that you can customize the function’s behaviour with optional keyword arguments:\n",
     "\n",
-    "`train_size` is the number that defines the size of the training set. If you provide a float, then it must be between 0.0 and 1.0 and it will define the share of the dataset used for testing. If you provide an int, then it will represent the total number of the training samples. The default value is None.\n",
+    "`train_size` is the number that defines the size of the training set. If you provide a `float`, then it must be between 0.0 and 1.0 and it will define the share of the dataset used for testing. If you provide an `int`, then it will represent the total number of the training samples. The default value is `None`.\n",
     "\n",
-    "`test_size` is the number that defines the size of the test set. It’s very similar to train_size. You should provide either train_size or test_size. If neither is given, then the default share of the dataset that will be used for testing is 0.25, or 25 percent.\n",
+    "`test_size` is the number that defines the size of the test set. It’s very similar to `train_size`. You should provide either `train_size` or `test_size`. If neither is given, then the default share of the dataset that will be used for testing is 0.25, or 25 percent.\n",
     "\n",
     "`random_state` is the object that controls randomization during splitting. It can be either an int or an instance of RandomState. Setting the random state is useful if you need reproducibility. The default value is None.\n",
     "\n",
     "`shuffle` is the Boolean object that determines whether to shuffle the dataset before applying the split. The default value is True.\n",
     "\n",
     "`stratify` is an array-like object that, if not None, determines how to use a stratified split.\n",
+    "\n",
+    "You can think of the splitting of data looking like this:\n",
+    "\n",
+    "![alt text](./images/data_split.png)\n",
     "\n",
     "Now it’s time to try data splitting!"
    ]
@@ -335,26 +339,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "700e362e-4c45-4c86-9052-3f58284b8787",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "syn_labels[test_idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b54787a-70bc-45ae-933c-494b1892a2e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred_test"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4e811a66-7b9d-4e0f-b720-18ceeeafc103",
    "metadata": {},
@@ -443,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Your solution here! ###"
+    "### Your solution here! ###\n"
    ]
   },
   {
@@ -538,13 +522,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0fb3a3bc-fa1a-43af-8691-88776a0c3286",
+   "cell_type": "markdown",
+   "id": "2b4bb4e5-fda6-4baf-8d9b-a1bf3ebfe027",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "\n"
+    "### Next Notebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "846d0a8e-10df-414a-8030-e9f65bbb7be8",
+   "metadata": {},
+   "source": [
+    "[Application](03_application.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b7588d5-f172-40e6-a674-ca5870b4110c",
+   "metadata": {},
+   "source": [
+    "-----"
    ]
   }
  ],
