--- a/Workshops/workshop_01/03_application.ipynb
+++ b/Workshops/workshop_01/03_application.ipynb
@@ -267,7 +267,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success\">\n",
-    "<b>Task 3: K-means analysis of wine qualities </b>\n",
+    "<b>Task 3: Clustering analysis of molecular descriptors </b>\n",
     "\n",
     "- Perform a k-means clustering on fermi energies v. molecular weight\n",
     "- Perform a DBSCAN clustering on fermi energies v. molecular weight\n",
