--- a/Workshops/workshop_02/01_dimensionality_reduction.ipynb
+++ b/Workshops/workshop_02/01_dimensionality_reduction.ipynb
@@ -268,15 +268,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.shape(data)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -367,6 +358,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data.dot(pca.components_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_projected = data.dot(pca.components_) + pca.mean_\n",
     "print(data_projected)"
    ]
@@ -386,7 +386,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Your solution here"
+    "### Your solution here\n"
    ]
   },
   {
@@ -591,8 +591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Your solution here:\n",
-    "\n"
+    "### Your solution here:\n"
    ]
   },
   {
@@ -634,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +743,7 @@
    "outputs": [],
    "source": [
     "tic = tICA()\n",
-    "tic.fit([data]);"
+    "tic.fit([data])"
    ]
   },
   {
@@ -794,8 +793,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Your solution here:\n",
-    "\n"
+    "### Your solution here:\n"
    ]
   },
   {
@@ -858,8 +856,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Your solution here:\n",
-    "\n"
+    "### Your solution here:\n"
    ]
   },
   {
@@ -1027,7 +1024,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.5"
   },
   "toc": {
    "base_numbering": 1,
