Remove nglview; add murd images; adjust texts

--- a/Workshops/workshop_02/02_classification.ipynb
+++ b/Workshops/workshop_02/02_classification.ipynb
@@ -75,12 +75,30 @@
    "id": "196868f4",
    "metadata": {},
    "source": [
-    "To get started with this tutorial, let's importing some packages."
+    "To get started with this tutorial, we will need to install an additional package [MDAnalysis](https://www.mdanalysis.org/) used for parsing and analysing molecular dynamics (MD) simulation data."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c68d322f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install MDAnalysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db368f69",
+   "metadata": {},
+   "source": [
+    "We then import all the packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "5f22ed32",
    "metadata": {},
    "outputs": [],
@@ -89,24 +107,11 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import nglview as nv\n",
     "import os\n",
     "import MDAnalysis as mda\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "401acc2b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_path='data'\n",
-    "if os.environ.get('COLAB_RELEASE_TAG') is None:\n",
-    "    data_path = os.path.join('..','data')"
    ]
   },
   {
@@ -122,17 +127,34 @@
    "id": "5bc18970",
    "metadata": {},
    "source": [
-    "In this tutorial we will use again the simulation of the protein MurD, presented in our second Jupyter notebook on [dimensionality reduction](2_DR_part2.ipynb). Let's start by loading the downsampled trajectories of its closed (PDB: [3UAG](https://www.rcsb.org/structure/3UAG)) and open (PDB: [1E0D](https://www.rcsb.org/structure/1E0D)) states. Both simulation data are 140 ns-long with a step size of 0.2 ns, and feature only backbone atoms of residues 7-436."
+    "In this tutorial we will use the simulation of enzyme protein MurD, which is used by bateria to synthesize peptidoglycan. MurD switches between open and closed states to facilitate the catalytic cycle. The open state allows MurD to bind to its substrates and to release the product once the reaction is complete, while the closed states correctly position the catalytic residues to make the reaction to occur. Let's start by loading the downsampled trajectories of its closed (PDB: [3UAG](https://www.rcsb.org/structure/3UAG)) and open (PDB: [1E0D](https://www.rcsb.org/structure/1E0D)) states. Both simulation data are 140 ns-long with a step size of 0.2 ns, and feature only backbone atoms of residues 7-436."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b17f2175",
+   "metadata": {},
+   "source": [
+    "<figure style=\"text-align: center;\">\n",
+    "    <img src=\"./data/closed.bmp.bmp\"\n",
+    "         alt=\"murd_closed\"\n",
+    "         width=\"45%\">\n",
+    "    <img src=\"./data/open.bmp.bmp\"\n",
+    "         alt=\"murd_open\"\n",
+    "         width=\"45%\">\n",
+    "    <figcaption> Figure. The closed (blue) and open (red) conformations of MurD. </figcaption>\n",
+    "</figure>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "253a2f80",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Here are all the data files:\n",
+    "data_path = 'data'\n",
     "pdb_file_closed = os.path.join(data_path,'MurD_closed_backbone.pdb') # this is the path where the three simulations are located\n",
     "pdb_file_open = os.path.join(data_path,'MurD_open_backbone.pdb')\n",
     "pdb_file_closed_apo = os.path.join(data_path,'MurD_closed_apo_backbone.pdb')"
@@ -140,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "590ac822",
    "metadata": {},
    "outputs": [],
@@ -150,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9a6223a4",
    "metadata": {},
    "outputs": [],
@@ -163,19 +185,17 @@
    "id": "391b5493",
    "metadata": {},
    "source": [
-    "By taking the closed conformation and manually removing the ligand, the protein switches to an open conformation. This is the simulation we want to classify. We will load 100 ns sampled every 0.2 ns (same atom selection as above)."
+    "By taking the closed conformation and manually removing the ligand, the protein switches to an open conformation. This is the simulation transitioning from the closed to open state that we want to classify. We will load 100 ns sampled every 0.2 ns (same atom selection as above)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "79be7ded",
    "metadata": {},
    "outputs": [],
    "source": [
-    "universe_closed_apo = mda.Universe(pdb_file_closed_apo)\n",
-    "w = nv.show_mdanalysis(universe_closed_apo)\n",
-    "w"
+    "universe_closed_apo = mda.Universe(pdb_file_closed_apo)"
    ]
   },
   {
@@ -199,7 +219,7 @@
    "id": "0965f351",
    "metadata": {},
    "source": [
-    "The class `Featurizer` implements different ways of extracting features from a simulation using MDAnalysis. We have met this class in the previous exercise on dimensionality reduction. Run this cell as-is."
+    "Different from the previous exercises on dimensionality reduction, the features to be extracted from MD simulations are often empirical. The class `Featurizer` implements some common ways of extracting features from a simulation using MDAnalysis. Run this cell as-is."
    ]
   },
   {
@@ -289,7 +309,7 @@
    "id": "aa807ca7",
    "metadata": {},
    "source": [
-    "We are now ready to collect features from two independent simulations of the closed and open state of MurD. Let's start by defining which kind of feature we are interested in extracting from the simulation."
+    "We are now ready to collect features from two independent simulations of the closed and open state of MurD. Let's start by defining which kind of feature we are interested in extracting from the simulation. Firstly we compute the alpha-carbon coordinates of the protein. "
    ]
   },
   {
@@ -355,7 +375,7 @@
    "id": "68f28e66",
    "metadata": {},
    "source": [
-    "Before going further, it is a good idea to take look at the training data we have just produced by projecting it on a lower dimensional space using Principal Components Analysis ([PCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html)), c.f. our [previous notebook on dimensionality reduction](../Unit_01/2_DR_part2.ipynb)."
+    "Before going further, it is a good idea to take look at the training data we have just produced by projecting it on a lower dimensional space using Principal Components Analysis ([PCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html))."
    ]
   },
   {
@@ -808,7 +828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
