Fix path to images

--- a/Workshops/workshop_02/02_classification.ipynb
+++ b/Workshops/workshop_02/02_classification.ipynb
@@ -136,10 +136,10 @@
    "metadata": {},
    "source": [
     "<figure style=\"text-align: center;\">\n",
-    "    <img src=\"./data/closed.bmp.bmp\"\n",
+    "    <img src=\"data/closed.bmp.bmp\"\n",
     "         alt=\"murd_closed\"\n",
     "         width=\"45%\">\n",
-    "    <img src=\"./data/open.bmp.bmp\"\n",
+    "    <img src=\"data/open.bmp.bmp\"\n",
     "         alt=\"murd_open\"\n",
     "         width=\"45%\">\n",
     "    <figcaption> Figure. The closed (blue) and open (red) conformations of MurD. </figcaption>\n",
