--- a/Workshops/workshop_02/02_classification.ipynb
+++ b/Workshops/workshop_02/02_classification.ipynb
@@ -66,8 +66,8 @@
     "output.enable_custom_widget_manager()\n",
     "\n",
     "# copy over data repository\n",
-    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/Edinburgh-Chemistry-Teaching/ML-for-Chemistry; fi\n",
-    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then cp -r ML-for-Chemistry/data .; fi"
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/Edinburgh-Chemistry-Teaching/ATCP-ML-workshop; fi\n",
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then cp -r ATCP-ML-workshop/Workshops/workshop_02/data .; fi"
    ]
   },
   {
