--- a/Workshops/workshop_02/01_dimensionality_reduction.ipynb
+++ b/Workshops/workshop_02/01_dimensionality_reduction.ipynb
@@ -72,7 +72,7 @@
     "# copy over data repository\n",
     "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/Edinburgh-Chemistry-Teaching/ATCP-ML-workshop; fi\n",
     "import os\n",
-    "os.chdir(f\"ATCP-ML-workshop{os.sep}workshop_02\")"
+    "os.chdir(f\"ATCP-ML-workshop{os.sep}Workshops{os.sep}workshop_02\")"
    ]
   },
   {
