--- a/Workshops/workshop_02/02_classification.ipynb
+++ b/Workshops/workshop_02/02_classification.ipynb
@@ -75,7 +75,7 @@
    "id": "196868f4",
    "metadata": {},
    "source": [
-    "To get started with this tutorial, we will need to install an additional package [MDAnalysis](https://www.mdanalysis.org/) used for parsing and analysing molecular dynamics (MD) simulation data."
+    "To get started with this tutorial, we will need to install an additional package [MDAnalysis](https://www.mdanalysis.org/) used for parsing and analysing molecular dynamics (MD) simulation data. <b><i>You do not need to run this cell if you are running on colab because it has been installed above. "
    ]
   },
   {
