--- a/Workshops/workshop_03/01_Intro_to_pytorch.ipynb
+++ b/Workshops/workshop_03/01_Intro_to_pytorch.ipynb
@@ -120,9 +120,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/Edinburgh-Chemistry-Teaching/ATCP_23_24; fi\n",
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/Edinburgh-Chemistry-Teaching/ATCP-ML-workshop; fi\n",
     "import os\n",
-    "os.chdir(f\"ATCP_23_24{os.sep}Unit_03\")"
+    "os.chdir(f\"ATCP-ML-workshop{os.sep}Workshops{os.sep}workshop_03\")"
    ]
   },
   {
@@ -148,8 +148,8 @@
    "id": "53553e38",
    "metadata": {},
    "source": [
-    "**<h2>Tensors**\n",
-    "    \n",
+    "## Tensors\n",
+    "\n",
     "A PyTorch Tensor is basically the same as a numpy array: it does not know anything about deep learning or computational graphs or gradients, and is just a generic n-dimensional array to be used for arbitrary numeric computation.\n",
     "\n",
     "The biggest difference between a numpy array and a PyTorch Tensor is that a PyTorch Tensor can run on either **CPU** or **GPU**. To run operations on the GPU, just cast the Tensor to a `cuda datatype`."
@@ -313,7 +313,7 @@
    "source": [
     "# Imports\n",
     "from sklearn import datasets\n",
-    "from   torch.utils.data import DataLoader, TensorDataset\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -515,7 +515,7 @@
    "outputs": [],
    "source": [
     "flat_mnist_train       = TensorDataset(xtrain, ytrain)\n",
-    "flat_dataloader_train  =  DataLoader(flat_mnist_train, batch_size=256, shuffle=True)"
+    "flat_dataloader_train  = DataLoader(flat_mnist_train, batch_size=256, shuffle=True)"
    ]
   },
   {
@@ -839,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
