--- a/Workshops/workshop_03/02_Solubility_classification.ipynb
+++ b/Workshops/workshop_03/02_Solubility_classification.ipynb
@@ -94,9 +94,9 @@
    "outputs": [],
    "source": [
     "# copy over data repository\n",
-    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/Edinburgh-Chemistry-Teaching/ATCP_23_24; fi\n",
+    "!if [ -n \"$COLAB_RELEASE_TAG\" ]; then git clone https://github.com/Edinburgh-Chemistry-Teaching/ATCP-ML-workshop; fi\n",
     "import os\n",
-    "os.chdir(f\"ATCP_23_24{os.sep}Unit_03\")"
+    "os.chdir(f\"ATCP-ML-workshop{os.sep}Workshops{os.sep}workshop_03\")"
    ]
   },
   {
@@ -105,7 +105,16 @@
     "id": "196868f4"
    },
    "source": [
-    "To get started with this tutorial, let's importing some packages."
+    "To get started with this tutorial, let's install and importing some packages."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install rdkit torchinfo"
    ]
   },
   {
@@ -141,8 +150,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from torchinfo import summary\n",
-    "# import torchvision.transforms as transforms\n",
+    "from   torchinfo import summary\n",
     "from   torch.utils.data import DataLoader, TensorDataset\n",
     "import torch.nn.functional as F"
    ]
@@ -355,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Your solution here\n"
+    "## Your solution here"
    ]
   },
   {
@@ -388,7 +396,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Your solution here\n"
+    "## Your solution here"
    ]
   },
   {
@@ -460,7 +468,7 @@
    "outputs": [],
    "source": [
     "X = df[\"SMILES\"]\n",
-    "y=np.array(df[\"isSoluble\"]) # label\n",
+    "y = np.array(df[\"isSoluble\"]) # label\n",
     "#Get ECFP Fingerprints\n",
     "X1 = X.apply(get_fingerprints).apply(lambda x: np.array(x, dtype=np.float32))\n",
     "X1 = np.concatenate(X1.values)\n",
@@ -612,8 +620,21 @@
     "importances = RF.feature_importances_\n",
     "importances_std = np.std([tree.feature_importances_ for tree in RF.estimators_], axis=0)\n",
     "\n",
-    "# Fix me\n",
-    "    "
+    "sorted_indices = np.argsort(importances)[-10:][::-1]\n",
+    "top_values = np.array(importances)[sorted_indices]\n",
+    "top_std_devs = np.array(importances_std)[sorted_indices]\n",
+    "colors = ['red' if i == 0 else 'skyblue' for i in range(10)]\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
+    "bars = ax.barh(range(10), top_values, xerr=top_std_devs, align='center', color=colors, capsize=5)\n",
+    "ax.set_yticks(range(10))\n",
+    "ax.set_yticklabels(sorted_indices)\n",
+    "ax.set_xlabel('Importance')\n",
+    "ax.set_ylabel('Feature index')\n",
+    "ax.set_title('Top 10 important features')\n",
+    "plt.gca().invert_yaxis()\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -639,7 +660,16 @@
    "source": [
     "<details>\n",
     "<summary> <mark> Solution: </mark> </summary>\n",
-    "# FIXME\n",
+    "\n",
+    "```Python\n",
+    "# Change hyperparameters for the random forest model\n",
+    "RF = RandomForestClassifier(n_estimators=46, min_samples_split=2, max_samples=0.92)\n",
+    "RF.fit(X_train, y_train)\n",
+    "r = RF.predict(X_test)\n",
+    "success = np.sum((r-y_test)==0)\n",
+    "percent = float(success)/len(y_test)*100\n",
+    "print(f'Success of test set: {percent}%')\n",
+    "```\n",
     "</details>"
    ]
   },
@@ -667,7 +697,7 @@
     "\n",
     "# Create the dataloaders\n",
     "batch_size = 128\n",
-    "trainloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n"
+    "trainloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)"
    ]
   },
   {
@@ -827,7 +857,7 @@
     "# Initialize the model, loss function, and optimizer\n",
     "model = DNN()\n",
     "criterion = nn.CrossEntropyLoss() # Use cross entropy loss for binary classification\n",
-    "optimizer = torch.optim.Adam(model.parameters(), lr=0.01) # Use Adam optimizer\n"
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001) # Use Adam optimizer"
    ]
   },
   {
@@ -872,7 +902,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "train_loss = []\n",
     "val_loss = []\n",
     "num_epochs = 50\n",
@@ -982,7 +1011,7 @@
     "        total += target.size(0)\n",
     "        correct += (predicted == target.long()).sum().item() # Convert target to long and compare\n",
     "        predictions += predicted.tolist()\n",
-    "        true_labels += target.tolist()\n"
+    "        true_labels += target.tolist()"
    ]
   },
   {
@@ -1047,8 +1076,7 @@
     "labels = [f\"{v1}\\n{v2}\\n{v3}\" for v1, v2, v3 in\n",
     "          zip(group_names,group_counts,group_percentages)]\n",
     "labels = np.asarray(labels).reshape(2,2)\n",
-    "sns.heatmap(cf_matrix, annot=labels, fmt='', cmap='Blues')\n",
-    "\n"
+    "sns.heatmap(cf_matrix, annot=labels, fmt='', cmap='Blues')"
    ]
   },
   {
@@ -1198,6 +1226,191 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 6. Extra Topic: Convolutional Neural Networks\n",
+    "\n",
+    "We define a new Deep Learning variant called **1D Convolutional Neural Network (CNN)** below.\n",
+    "CNN is a type of deep learning model that is typically used for image and signal processing tasks. \n",
+    "\n",
+    "In this code, the model takes a 1D input signal of length 1024 and performs a series of convolution, pooling and fully connected operations to classify the signal into one of two classes. The `conv1` and `conv2` layers are 1D convolutional layers that apply filters to the input signal to extract features. The `pool1` and `pool2` layers are max-pooling layers that down-sample the input signal. The `fc1` and `fc2` layers are fully connected layers that perform classification based on the extracted features. The `softmax` activation is applied to the output to produce probabilities for each class. This gives us the classification into soluble and insoluble molecules. \n",
+    "\n",
+    "The steps are similar to DNN model. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the 1D CNN model\n",
+    "class CNN1D(nn.Module):\n",
+    "    def __init__(self):\n",
+    "        super(CNN1D, self).__init__()\n",
+    "        self.conv1 = nn.Conv1d(in_channels=1, out_channels=16, kernel_size=3, stride=1, padding=1)\n",
+    "        self.pool1 = nn.MaxPool1d(kernel_size=2, stride=2)\n",
+    "        self.conv2 = nn.Conv1d(in_channels=16, out_channels=32, kernel_size=3, stride=1, padding=1)\n",
+    "        self.pool2 = nn.MaxPool1d(kernel_size=2, stride=2)\n",
+    "        self.fc1 = nn.Linear(32 * 256, 128)\n",
+    "        self.fc2 = nn.Linear(128, 2)\n",
+    "        self.softmax = nn.Softmax()\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = x.reshape(-1, 1, 1024)\n",
+    "        x = self.pool1(F.relu(self.conv1(x)))\n",
+    "        x = self.pool2(F.relu(self.conv2(x)))\n",
+    "        x = x.reshape(-1, 32 * 256)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        x = self.softmax(x)\n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize the model, loss function, and optimizer\n",
+    "model_cnn = CNN1D()\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model_cnn.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary(model_cnn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train the CNN model and keep track of validation loss\n",
+    "train_loss1 = []\n",
+    "val_loss1 = []\n",
+    "num_epochs = 50\n",
+    "\n",
+    "for epoch in range(num_epochs):\n",
+    "    running_loss = 0.0\n",
+    "    for i, data in enumerate(trainloader, 0):\n",
+    "        inputs, labels = data\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model_cnn(inputs)\n",
+    "        \n",
+    "        loss = criterion(outputs, labels.long())\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        running_loss += loss.item()\n",
+    "        \n",
+    "    avg_train_loss = running_loss / len(trainloader)\n",
+    "    train_loss1.append(avg_train_loss)\n",
+    "    \n",
+    "    val_running_loss = 0.0\n",
+    "    with torch.no_grad():\n",
+    "        for i, data in enumerate(valloader, 0):\n",
+    "            inputs, labels = data\n",
+    "            outputs = model_cnn(inputs)\n",
+    "            \n",
+    "            val_batch_loss = criterion(outputs, labels.long())\n",
+    "            val_running_loss += val_batch_loss.item()\n",
+    "        \n",
+    "    avg_val_loss = val_running_loss / len(valloader)\n",
+    "    val_loss1.append(avg_val_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the validation loss\n",
+    "plt.plot(range(num_epochs), train_loss1, label='Training Loss')\n",
+    "plt.plot(range(num_epochs), val_loss1, label='Validation Loss')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 6a.</b> From the above plot, what do you think about the CNN model's learning over 50 epochs. Compare its performance with DNN. </div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test the model on the test data\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "predictions = []\n",
+    "true_labels = []\n",
+    "with torch.no_grad():\n",
+    "    for i, data in enumerate(testloader, 0):\n",
+    "        inputs, target = data\n",
+    "        outputs = model_cnn(inputs)\n",
+    "        _, predicted = torch.max(outputs.data, 1) # Get the class with the highest probability\n",
+    "        total += target.size(0)\n",
+    "        correct += (predicted == target.long()).sum().item() # Convert target to long and compare\n",
+    "        predictions += predicted.tolist()\n",
+    "        true_labels += target.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy = correct / total\n",
+    "print(f'Accuracy of the network on the test data: {(100 * accuracy):.2f} %' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot confusion matrix\n",
+    "cf_matrix= confusion_matrix(true_labels, predictions)\n",
+    "group_names = ['True Neg','False Pos','False Neg','True Pos']\n",
+    "group_counts = [\"{0:0.0f}\".format(value) for value in\n",
+    "                cf_matrix.flatten()]\n",
+    "group_percentages = [\"{0:.2%}\".format(value) for value in\n",
+    "                     cf_matrix.flatten()/np.sum(cf_matrix)]\n",
+    "labels = [f\"{v1}\\n{v2}\\n{v3}\" for v1, v2, v3 in\n",
+    "          zip(group_names,group_counts,group_percentages)]\n",
+    "labels = np.asarray(labels).reshape(2,2)\n",
+    "sns.heatmap(cf_matrix, annot=labels, fmt='', cmap='Blues')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-success\">\n",
+    "<b>Task 6b.</b> Is there a change in true positive, false positive and false negative rates as compared to the DNN model? </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## END\n",
     "----------"
    ]
@@ -1224,7 +1437,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
